# some_3d_game_for_templates

./: .gitignore  CMakeLists.txt
app/: AppWindow.cpp  AppWindow.h  main.cpp
engine/: Window.cpp  Window.h
game_engine/: Window.cpp
game_engine/graphics_engine/: GraphicsEngine.cpp  GraphicsEngine.h
game_engine/graphics_engine/device_context/: DeviceContext.cpp  DeviceContext.h
game_engine/graphics_engine/swap_chain/: SwapChain.cpp  SwapChain.h
game_engine/windowing_system/: Window.cpp  Window.h
